<resources>
    <string name="app_name">Dastyar Mafia</string>
    <string name="app_name_persian">دستیار مافیا</string>
    <string name="app_description">کامل ترین اپ مافیا</string>
    <string name="home_persian">خانه</string>
    <string name="submit_text">ورود به بازی</string>
    <string name="yes_persian">بله</string>
    <string name="no_persian">خیر</string>
    <string name="demo_mode">حالت دمو</string>
    <string name="submit_persian">تائید</string>
    <string name="select_roles_persian">انتخاب نقش ها</string>
    <string name="select_players_persian">انتخاب بازیکنان</string>
    <string name="select_auto_persian">انتخاب خودکار</string>
    <string name="create_player_persian">ساخت بازیکن</string>
    <string name="enter_player_name_persian">نام بازیکن</string>
    <string name="players_activity_help">شما هیچ بازیکنی ندارید!</string>
    <string name="player_activity_help_button">به راحتی اضافه کنید!</string>
    <string name="player_edit_button_persian">عوض کردن نام بازیکن</string>
    <string name="player_delete_button_persian">پاک کردن بازیکن</string>
    <string name="setting_persian">تنظیمات</string>
    <string name="select_all_persian">انتخاب همه</string>
    <string name="add_player_persian">اضافه کردن بازیکن</string>
    <string name="back_persian">برگشت</string>
    <string name="citizen_tab_persian">شهروند</string>
    <string name="mafia_tab_persian">مافیا</string>
    <string name="confirm_text_persian">آیا از ادامه کار مطمئنید؟</string>

    <!-- Roles -->

    <string name="god_father">گاد فادر</string>
    <string name="dr_lecter">دکتر لکتر</string>
    <string name="simple_mafia">مافیا ساده</string>
    <string name="joker">جوکر</string>

    <string name="die_hard">جان سخت</string>
    <string name="professional">حرفه ای</string>
    <string name="detective">کارآگاه</string>
    <string name="dr">دکتر</string>
    <string name="mayor">شهردار</string>
    <string name="simple_citizen">شهروند ساده</string>
    <string name="psychiatrist">روان پزشک</string>
    <string name="developers_persian">توسعه دهندگان</string>


</resources>