<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PlayerActivity">

    <RelativeLayout android:background="#555353" android:id="@+id/header" android:layout_height="wrap_content" android:layout_width="match_parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/select_players_text"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/back_persian"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/select_players_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/soraya"
            android:text="@string/select_players_persian"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout android:visibility="invisible" android:layout_centerInParent="true" android:id="@+id/no_players" android:layout_height="wrap_content" android:layout_width="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/soraya"
            android:text="@string/players_activity_help"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_above="@id/end"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- players -->
        </LinearLayout>
    </ScrollView>

    <RelativeLayout android:id="@+id/end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/toggle_all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:contentDescription="@string/select_all_persian"
            android:src="@drawable/ic_submit_all" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/soraya"
            android:text="@string/submit_persian"
            android:background="@drawable/submit_button"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="3dp"
            android:layout_alignParentStart="true"/>

        <ImageButton
            android:id="@+id/add_player_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:contentDescription="@string/add_player_persian"
            android:src="@drawable/ic_add" />
    </RelativeLayout>

</RelativeLayout>