<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/create_player_activity"
    tools:context=".CreatePlayer">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/soraya"
        android:text="@string/create_player_persian"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/player_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/soraya"
        android:hint="@string/enter_player_name_persian"
        android:inputType="textAutoComplete"
        android:maxLength="15"
        android:maxLines="1"
        android:textColorHint="#3E2723"
        android:autofillHints="" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_name_edit"
        android:background="@drawable/create_player_activity_button"
        android:fontFamily="@font/soraya"
        android:text="@string/submit_persian"
        android:textColor="#D50000"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>