<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AboutUs">

    <RelativeLayout android:background="#555353" android:id="@+id/header" android:layout_height="wrap_content" android:layout_width="match_parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/select_players_text"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/back_persian"
            android:src="@drawable/ic_back"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/select_players_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/soraya"
            android:text="@string/setting_persian"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/yekan"
        android:textAlignment="center"
        android:text="این پروژه کاری است از گروه 'دستیار مافیا' که با این کیفیت به دست شما رسیده است."
        android:textColor="#C3F468"
        android:textSize="20sp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/developers_persian"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_groups" />

</RelativeLayout>